Add xmonad Stdin to xmobar.

--- a/.xmobarrc
+++ b/.xmobarrc
@@ -1,18 +1,19 @@
 Config { font = "xft:Fira Code:bold:size=10"
         , borderColor = "#93a1a1"
         , border = TopB
-	, alpha = 200
+        , alpha = 200
         , bgColor = "#282c34"
         , fgColor = "#ff6c6b"
         , position = TopW L 100
         , commands = [ Run Network "eth0" ["-L","0","-H","32","--normal","green","--high","red"] 10
                         , Run Cpu ["-L","3","-H","50","--normal","green","--high","red"] 10
                         , Run Memory ["-t","Mem: <usedratio>%"] 10
+                        , Run StdinReader
                         , Run Swap [] 10
                         , Run Com "uname" ["-s","-r"] "" 36000
                         , Run Date "%a %b %_d %Y %H:%M:%S" "date" 10
                         ]
         , sepChar = "%"
         , alignSep = "}{"
-        , template = " %cpu% | %memory% * %swap% | %eth0% }-*- Xmonad -*-{<fc=#ee9a00>%date%</fc> | %uname% "
+        , template = "MK: %cpu% | %memory% * %swap% | %eth0% }%StdinReader%{<fc=#ee9a00>%date%</fc> | %uname% "
         }
