Update with Nerd Fonts and compton.

--- a/.xmobarrc
+++ b/.xmobarrc
@@ -1,4 +1,4 @@
-Config { font = "xft:Fira Code:bold:size=10"
+Config { font = "xft:agave NF:normal:size=10"
         , borderColor = "#93a1a1"
         , border = TopB
         , alpha = 200
@@ -12,8 +12,10 @@ Config { font = "xft:Fira Code:bold:size=10"
                         , Run Swap [] 10
                         , Run Com "uname" ["-s","-r"] "" 36000
                         , Run Date "%a %b %_d %Y %H:%M:%S" "date" 10
+			, Run DiskU [("/", "<used>/<size>"), ("sdb1", "<usedbar>")] ["-L", "20", "-H", "50", "-m", "1", "-p", "3"] 20
+			, Run DiskIO [("/", "<read> <write>"), ("sdb1", "<total>")] [] 10
                         ]
         , sepChar = "%"
         , alignSep = "}{"
-        , template = "MK: %cpu% | %memory% * %swap% | %eth0% }%StdinReader%{<fc=#ee9a00>%date%</fc> | %uname% "
+        , template = " <fc=red></fc> %cpu% | %diskio% |  %memory% * %swap% | %eth0% }%StdinReader%{<fc=#ee9a00>%date%</fc> | %uname% "
         }
